lib/parsely_expression.tt
require 'parsely_ast'

grammar ParselyExpr 
  rule expression
    (funcall / variable)+ {
      def eval_with(scope)
        elements.map do |e| e.eval_with scope end
      end
    }   
  end

  rule funcall
    function ws variable  {
      def eval_with(scope)
        eval("%s(%s)"%[function.text_value,variable.eval_with(scope)],scope)
      end
    }
  end

  rule function
    [a-z]+
  end

  rule variable
    '$' [0-9]+ {
      def eval_with(scope)
        eval(text_value.gsub('$(\d+)','__dollar__[\1]'),scope)
      end
    }

  end
  rule ws
    [\s]+
  end
end
